# 211_331_Kucher

./: CMakeLists.txt  pin.txt
211_331_Kucher_EXAM/: data.csv  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pin.txt
211_331_Kucher_EXAM/211_331_Kucher_EXAM/: main.cpp
